module view layout and styles change

--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -4,12 +4,16 @@
 .ease {
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .fadein {
   -webkit-transition: opacity 0.5s ease-in-out;
@@ -287,12 +291,16 @@
   background-color: #e74c30;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .docket ul li:hover a {
   color: #ffffff;
@@ -365,12 +373,16 @@
   margin: 4px 0 11px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .element-wrapper .element-controls {
   position: relative;
@@ -402,24 +414,32 @@
   border: 2px solid #00acec;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .element-wrapper .element-controls .aj-imp-drag-handle p:hover {
   background: #00acec;
   color: #ffffff;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .element-wrapper .element-controls .aj-imp-delete-btn {
   right: -10px;
@@ -439,12 +459,16 @@
   background: #00acec;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .element-wrapper .element-controls .aj-imp-delete-btn:hover span {
   color: #ffffff;
@@ -468,12 +492,16 @@
   background: #00acec;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .element-wrapper .element-controls .aj-imp-settings-btn:hover span {
   color: #ffffff;
@@ -482,12 +510,16 @@
   border: 2px solid #00acec;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .element-wrapper.hover-class:hover > .element-controls .aj-imp-drag-handle,
 .element-wrapper.hover-class:hover > .element-controls .aj-imp-delete-btn,
@@ -496,12 +528,16 @@
   display: block;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .element-wrapper.hover-class:hover > .element-markup > .row > .column:last-child {
   border-right: 0;
@@ -609,12 +645,16 @@
   -o-transform: rotate(-90deg);
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .aj-imp-col-divider p:hover,
 .aj-imp-col-divider p:active {
@@ -623,12 +663,16 @@
   border-color: #00acec;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 #settings-region {
   position: absolute !important;
@@ -910,8 +954,7 @@ p.mcq-option-text {
 	display: block;
 	//clear: left;
 	float: left;
-}*/
-.style .select2-container {
+}*/.style .select2-container {
   width: 60%;
 }
 .colors .minicolors-theme-default.minicolors {
@@ -951,8 +994,10 @@ p.mcq-option-text {
   border: 15px solid transparent;
   -webkit-border-image: url(../../../images/border.gif) 20 20 stretch;
   /* Safari 5 */
+
   -o-border-image: url(../../../images/border.gif) 20 20 stretch;
   /* Opera */
+
   border-image: url(../../../images/border.gif) 20 20 stretch;
 }
 .fib-text input[type="text"].ansWrong {
@@ -962,12 +1007,16 @@ p.mcq-option-text {
   background-size: 25px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .fib-text input[type="text"].ansRight {
   background: url(../../../images/right-ans.gif) no-repeat right center;
@@ -976,12 +1025,16 @@ p.mcq-option-text {
   background-size: 25px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .fib-text input[type="text"].active {
   outline: 1px solid #0aa699;
@@ -1035,24 +1088,32 @@ p.mcq-option-text {
   background-size: 25px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .mcq-option.ansFalse {
   opacity: 0.2;
   border-bottom: 2px solid #f35958;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .mcq-option.ansRight {
   background: url(../../../images/right-ans.gif) no-repeat right center;
@@ -1060,12 +1121,16 @@ p.mcq-option-text {
   background-size: 25px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .mcq-option .mcq-option-select {
   float: left;
@@ -1144,12 +1209,16 @@ p.mcq-option-text {
   padding-right: 40px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .sort-option.ansRight {
   background: url(../../../images/right-ans.gif) no-repeat right center;
@@ -1159,12 +1228,16 @@ p.mcq-option-text {
   padding-right: 40px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
+
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
+
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
+
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
 }
 .sort-option .sort-option-text {
   margin: 0;
@@ -1202,8 +1275,8 @@ p.mcq-option-text {
   font-size: 13px;
 }
 .cpTimer {
-  max-width: 190px;
   margin: 10px auto 0;
+  color: #ffffff;
 }
 .cpTimer .textDiv_Seconds span {
   opacity: 0.3;
@@ -1226,6 +1299,33 @@ p.mcq-option-text {
   border: none;
   padding: 0 7px;
   margin: 2px 0 15px;
+}
+.contentTime {
+  float: right;
+}
+.contentInfo {
+  float: left;
+}
+.contentTime,
+.contentInfo {
+  width: 235px;
+  background: #cdcdcd;
+  margin: 0 1.5%;
+}
+@media (min-width: 1020px) and (max-width: 1295px) {
+  #myCanvas {
+    margin: 0;
+    margin-left: auto;
+  }
+  .contentTime,
+  .contentInfo {
+    margin: 0;
+    left: 0;
+    position: absolute;
+  }
+  .contentTime {
+    top: 325px;
+  }
 }
 .answrMsg.alert-success h3 {
   color: #007366;
@@ -1540,9 +1640,6 @@ p.mcq-option-text {
   position: relative;
   min-height: 200px;
 }
-h4.modName a {
-  color: #0090d9;
-}
 .modProgress {
   width: 200px;
 }
@@ -1755,7 +1852,7 @@ input#duration {
   max-width: 760px;
 }
 .timerBox {
-  float: left;
+  float: right;
 }
 .timerBox,
 .quizProgress {
@@ -1764,7 +1861,7 @@ input#duration {
   margin: 0 1.5%;
 }
 .quizProgress {
-  float: right;
+  float: left;
 }
 .quizSteps ul {
   list-style-type: none;
@@ -1881,17 +1978,15 @@ input#duration {
   .timerBox,
   .quizProgress {
     margin: 0;
-    right: 0;
+    left: 0;
     position: absolute;
   }
   .timerBox {
     top: 420px;
   }
-  .quizContent #myCanvas {
-    margin: 0;
-  }
   .quizActions {
     margin: 0;
+    margin-left: auto;
   }
   .sidebarContainer {
     position: relative;
@@ -2070,6 +2165,7 @@ tbody.rowlink td {
 .scrollup {
   left: auto;
   right: 50px;
+  display: none;
 }
 .tiles-head {
   padding: 10px 18px 5px 24px;
@@ -2078,6 +2174,7 @@ tbody.rowlink td {
   .login-container {
     margin-top: 20px !important;
     /*For mobile app testing*/
+  
   }
 }
 .contentSelect select {
@@ -2094,7 +2191,7 @@ textarea.error,
 .page-content {
   min-height: 0;
   overflow-x: hidden;
-  padding-bottom: 80px;
+  padding-bottom: 50px;
 }
 .mainLogo {
   background-size: 80%;
@@ -2201,10 +2298,12 @@ ol > li {
 }
 :-moz-placeholder {
   /* Firefox 18- */
+
   color: #cdcdcd;
 }
 ::-moz-placeholder {
   /* Firefox 19+ */
+
   color: #cdcdcd;
 }
 :-ms-input-placeholder {
@@ -2278,4 +2377,3 @@ select:before {
     min-height: 0;
   }
 }
-/*# sourceMappingURL=custom.css.map */
