--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -43,7 +43,7 @@
 }
 
 .timerBox{
-	float: left;
+	float: right;
 }
 
 .timerBox, .quizProgress{
@@ -54,7 +54,7 @@
 }
 
 .quizProgress{
-	float: right;
+	float: left;
 }
 
 .quizSteps{
@@ -187,19 +187,20 @@
 	.timerBox, .quizProgress{
 		margin: 0;
 		// float: right;
-		right: 0;
+		left: 0;
 		position: absolute;
 	}
 	.timerBox{
 		top: 420px;
 	}
-	.quizContent{
-		#myCanvas{
-			margin: 0;
-		}
-	}
+	// .quizContent{
+	// 	#myCanvas{
+	// 		margin: 0;
+	// 	}
+	// }
 	.quizActions{
 		margin: 0;
+		margin-left: auto;
 	}
 	.sidebarContainer{
 		position: relative;
