--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
@@ -4,39 +4,37 @@
                 It is designed to help you train for the class</span></h4>
     </div>
 {{/isTraining}}
-<div class="tiles white m-b-20">
+<div class="moduleInfo m-b-20">
 	<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
         <div class="row">
-            <div class="col-sm-4">
-                <h4 class="bold  text-info modName"><i class="fa fa-chevron-left"></i> <a id="back-to-module" href="javascript://">Back to {{name}}</a></h4>
+            <div class="col-sm-2">
+                <a id="back-to-module" class="btn btn-small btn-block btn-white"><h4 class="semi-bold text-info no-margin"><span class="fa fa-pause"></span> {{name}}</h4></a>
+                
+                <!-- {{&showPauseButton}} -->
             </div>
-
-            <div class="col-sm-8">
-
-                {{&showPauseButton}}
+            <div class="col-sm-7 b-grey b-l">
+                <div class="text-grey p-t-10 p-l-5 p-r-10 p-b-10">
+                    <p class="bold small-text muted">Objective: </p>
+                    <p class="">{{description.objective}}</p>
+                </div>
+            </div>
+            <div class="col-sm-3 b-grey b-l text-center">
 
                 {{^isTraining}}
-                    <div class="modProgress pull-right">
-                        <p class="bold small-text m-t-10 m-b-5">Progress</p>
-                        <div class="progress progress-large">
+                    <div class="modProgress h-center">
+                        <p class="bold small-text muted m-t-10 m-b-5">Progress</p>
+                        <div class="progress progress-large w100">
                             <div data-percentage="{{getProgressPercentage}}%" style="width: {{getProgressPercentage}}%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100">{{getProgressData}}</div>
                         </div>
                     </div>
-
-                    <div class="pull-right m-r-30">
-                        <p class="bold small-text"> Completed Time</p>
-                        <h4 class="text-grey m-t-0 m-b-0 semi-bold time"> <i class="fa fa-clock-o"></i> {{moduleTime}}</h4>
-                    </div>
+                    <h5 class="text-grey m-t-0 m-b-0 bold time"><span class="muted">Completed Time:</span> <i class="fa fa-clock-o"></i> {{moduleTime}}</h5>
                 {{/isTraining}}
 
-
-
             </div>
+
+            
             <div class="clearfix"></div>
         </div>
 	</div>
-	<div class="tiles grey text-grey p-t-10 p-l-15 p-r-10 p-b-10 b-grey b-b">
-		<p class="bold small-text">Objective: </p>
-		<p class="">{{description.objective}}</p>
-	</div>
+	
 </div>
