--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -175,6 +175,7 @@ tbody.rowlink{
 .scrollup{
 	left:auto;
 	right:50px;
+	display: none !important;
 }
 
 .tiles-head{
@@ -246,7 +247,7 @@ textarea.error, .select2-choice.error {
 .page-content{
 	min-height: 0;
 	overflow-x: hidden;
-	padding-bottom: 80px;
+	padding-bottom: 50px;
 }
 
 .mainLogo{
