--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1274,8 +1274,14 @@ p.mcq-option-text {
 .hashtags {
   font-size: 13px;
 }
+.moduleInfo {
+  background: #f3f3f3;
+  border-bottom: 1px solid #c3c3c3;
+}
+.moduleInfo .btn {
+  white-space: normal;
+}
 .cpTimer {
-  max-width: 190px;
   margin: 10px auto 0;
 }
 .cpTimer .textDiv_Seconds span {
@@ -1293,12 +1299,42 @@ p.mcq-option-text {
   font-size: 22px;
 }
 #content-board {
-  margin-top: 30px;
+  margin-top: 15px;
 }
 #content-board .element-wrapper {
   border: none;
   padding: 0 7px;
   margin: 2px 0 15px;
+}
+.contentTime {
+  float: left;
+}
+.contentInfo {
+  float: right;
+  padding: 20px;
+}
+.contentTime,
+.contentInfo {
+  width: 235px;
+  background: #f3f3f3;
+  border: 1px solid #c3c3c3;
+  box-shadow: #dadada 0 0 0 3px inset;
+  margin: 0 1.5%;
+}
+@media (min-width: 1020px) and (max-width: 1295px) {
+  #myCanvas {
+    margin: 0;
+    margin-left: auto;
+  }
+  .contentTime,
+  .contentInfo {
+    margin: 0;
+    left: 5px;
+    position: absolute;
+  }
+  .contentInfo {
+    top: 325px;
+  }
 }
 .answrMsg.alert-success h3 {
   color: #007366;
@@ -1613,9 +1649,6 @@ p.mcq-option-text {
   position: relative;
   min-height: 200px;
 }
-h4.modName a {
-  color: #0090d9;
-}
 .modProgress {
   width: 200px;
 }
@@ -1828,7 +1861,7 @@ input#duration {
   max-width: 760px;
 }
 .timerBox {
-  float: left;
+  float: right;
 }
 .timerBox,
 .quizProgress {
@@ -1837,7 +1870,7 @@ input#duration {
   margin: 0 1.5%;
 }
 .quizProgress {
-  float: right;
+  float: left;
 }
 .quizSteps ul {
   list-style-type: none;
@@ -1954,17 +1987,15 @@ input#duration {
   .timerBox,
   .quizProgress {
     margin: 0;
-    right: 0;
+    left: 0;
     position: absolute;
   }
   .timerBox {
     top: 420px;
   }
-  .quizContent #myCanvas {
-    margin: 0;
-  }
   .quizActions {
     margin: 0;
+    margin-left: auto;
   }
   .sidebarContainer {
     position: relative;
@@ -2143,6 +2174,7 @@ tbody.rowlink td {
 .scrollup {
   left: auto;
   right: 50px;
+  display: none !important;
 }
 .tiles-head {
   padding: 10px 18px 5px 24px;
@@ -2168,7 +2200,7 @@ textarea.error,
 .page-content {
   min-height: 0;
   overflow-x: hidden;
-  padding-bottom: 80px;
+  padding-bottom: 50px;
 }
 .mainLogo {
   background-size: 80%;
