--- a/wp-content/themes/walnut/walnut/dev/js/apps/admin-content-modules/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/admin-content-modules/templates/outer-template.html
@@ -54,6 +54,14 @@
                     <tbody>
                     </tbody>
                 </table>
+
+                <button id="send-email" style="display:none" class="btn btn-success btn-cons2 right pull-left m-t-10 m-r-10" type="submit">
+                    <i class="fa fa-check"></i> Send Email
+                </button>
+
+                <button id="send-sms" style="display:none" class="btn btn-info btn-cons2 right pull-left m-t-10" type="submit">
+                    <i class="fa fa-check"></i> Send SMS
+                </button>
             </div>
         </div>
     </div>
