--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -22,6 +22,7 @@ body{
 	background-color: @body-bg;
 	overflow-y: scroll;
 	height: 100%;
+	-webkit-text-stroke: 0.1px;
 }
 
 #site_main_container{
