--- a/HTML/assets/less/module.less
+++ b/HTML/assets/less/module.less
@@ -80,3 +80,19 @@ input#duration{
 	color: darken(@dash-grey, 25%);
 	font-weight: bold;
 }
+
+.modTimes{
+	& > div{
+		width: 25%;
+		float: left;
+		padding: 0 10px;
+	}
+}
+
+.moduleInfo{
+	.modTime{
+		width: 20%;
+		float: left;
+		padding: 0 10px 10px;
+	}
+}
