--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -12,7 +12,7 @@ h3.modName{
 }
 
 .modProgress{
-	width: 200px;
+	width: 100%;
 	.progress{
 		width: 100%;
 	}
@@ -30,12 +30,37 @@ h3.time{
 	outline: none;
 }
 
+#question-details-region{
+	min-height: 530px;
+}
+@media(max-width:1295px){
+	#question-details-region{
+		min-height: 585px;
+	}
+}
+
+.studentActions{
+	display: table;
+	margin: 0 auto;
+	border-bottom: 1px solid lighten(@dash-grey, 10%);
+}
+
 .studentList{
+	// background: @preview-grey;
+	// border: 1px solid lighten(@dash-grey, 10%);
+	// box-shadow: darken(@preview-grey, 10%) 0 0 0 3px inset;
+	margin: 0 5px;
+	position: relative;
 	h4{
 		span{
 			display: block;
 		}
 	}
+
+	// .listNav{
+	// 	border-top: 1px solid lighten(@dash-grey, 10%);
+	// 	border-bottom: 1px solid lighten(@dash-grey, 10%);
+	// }
 
 	.listNavShow{
 		display: block;
@@ -57,6 +82,9 @@ h3.time{
 					   		transform: scale(1.3);
 				}
 
+			}
+			&.white{
+				background-color: @preview-grey;
 			}
 			&.single.light{
 				opacity: 0.2;
