--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
@@ -39,7 +39,7 @@
                     </div>
                 {{/isTraining}}
             </div>
-            <div class="modTime">
+            <div class="modTime next">
                 <button type="button" id="" class="btn  btn-success m-t-10 pull-right">
                     <i class="fa fa-forward"></i> Next
                 </button>
