completed single module summary view changes, button style changes

--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -51,7 +51,7 @@
 
 .contentInfo{
 	float: right;
-	padding: 20px;
+	padding: 20px 20px 10px;
 }
 
 .contentTime, .contentInfo{
@@ -68,13 +68,21 @@
 		margin: 0;
 		margin-left: auto;
 	}
+	#top-panel{
+		float: left;
+		margin-left: 2px;
+	}
+	.contentTime{
+		margin-bottom: 8px;
+	}
 	.contentTime, .contentInfo{
-		margin: 0;
-		left: 5px;
-		position: absolute;
+		// margin: 0;
+		// left: 5px;
+		// position: absolute;
+		float: none;
 	}
 	.contentInfo{
-		top: 175px;
+		// top: 175px;
 	}
 }
 .answrMsg{
