--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -328,7 +328,11 @@ label, input, button, select, textarea{
 .btn{
 	//padding: 10px 30px;
 	//padding-top: 10px;
-	font-weight: bold;
+	// font-weight: bold;
+	font-family: "Roboto";
+	border-radius: 0;
+	text-transform: uppercase;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
 }
 
 .form-control{
