--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
@@ -17,3 +17,12 @@
     </div>
 </a>
 {{/videoPreview}}
+{{#audioPreview}}
+<a class="thumbnail">
+    <div class="imaTitle"><span>{{title_show}}</span></div>
+    <div class="ticker">
+        <span class="glyphicon glyphicon-ok"></span>
+        <span class="glyphicon glyphicon-minus"></span>
+    </div>
+</a>
+{{/audioPreview}}
