--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
@@ -100,7 +100,7 @@
                     {{^isTraining}}
                     <div class="progress progress-large">
                         <div data-percentage="{{getProgressPercentage}}%" style="width:{{getProgressPercentage}}%;"
-                             class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0"
+                             class="progress-bar progress-bar-info" role="progressbar" aria-valuemin="0"
                              aria-valuemax="100">{{getProgressData}}
                         </div>
                     </div>
