--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -122,12 +122,19 @@
 			.modTime{
 				display: none;
 			}
-			.modTime.next{
+			.modTime.next, .modTime.pause{
 				display: block;
 				float: right;
 				padding: 0 10px 5px;
-				button{
+				.btn{
 					margin-top: 5px;
+				}
+			}
+			.modTime.pause{
+				float: left;
+				h4{
+					font-size: 17px;
+					line-height: 22px;
 				}
 			}
 		}
