contentpiece preview button

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -62,7 +62,6 @@
                 <div class="col-sm-4">
                     <label class="form-label">Status</label>
                     <select required name="post_status" id="status" class="form-control select2" >
-                        <option value="">--select status--</option>
                         <option value="pending">Under Review</option>
                         <option value="publish">Published</option>
                     </select>
@@ -105,3 +104,14 @@
         </div>
     </div>
 </form>
+
+<div class="builder_actions pull-right">
+    <button type="button" class="btn btn-info btn-cons2" id="save-question">
+        <i class="fa fa-check"></i> Save</button>
+    <button type="button" id="preview-question" style="display:none" class="btn btn-info btn-cons2">
+        <i class="fa fa-eye"></i> Preview</button>
+</div>
+
+<div class="page-title">
+    <h3>Add <span class="semi-bold">Question</span></h3>
+</div>
