next button shifted to module description area student question action buttons shown only on selection of students

--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
@@ -12,10 +12,6 @@
                 <!-- {{&showPauseButton}} -->
             </div>
             <div class="modTime b-grey b-l text-center">
-                <!-- <div class="text-grey p-t-10 p-l-5 p-r-10 p-b-10">
-                    <p class="bold small-text muted">Objective: </p>
-                    <p class="">{{description.objective}}</p>
-                </div> -->
                 <p class="bold small-text muted no-margin">Module Time</p>
                 <h3 class="bold text-grey no-margin">
                     <span class="animate-number" data-animation-duration="1200">{{total_minutes}} mins</span>
@@ -40,7 +36,7 @@
                 {{/isTraining}}
             </div>
             <div class="modTime">
-                <button type="button" id="" class="btn  btn-success m-t-10 pull-right">
+                <button type="button" id="question-done"  class="btn  btn-success m-t-10 pull-right">
                     <i class="fa fa-forward"></i> Next
                 </button>
             </div>
