question elements hidden for content pieces in content creator

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
@@ -18,7 +18,7 @@
         <div class="clearfix"></div>
     </ul>
 </div>
-<h5 class="semi-bold text-center b-b b-grey p-b-10">Questions</h5>
+<h5 class="semi-bold text-center b-b b-grey p-b-10" id="questions_elements_label">Questions</h5>
 <div class="qstns">
     <ul class="elements">
         <li data-element="Hotspot">
